--- a/02-hamburger/begin/css/nav.css
+++ b/02-hamburger/begin/css/nav.css
@@ -4,7 +4,104 @@ https://medium.com/@heyoka/responsive-pure-css-off-canvas-hamburger-menu-aebc8d1
 Below is a starting navigation bar formatted for mobile and desktop. MQ is set to break where nav wraps once we've set up some typography... which we have not done yet. Trust the process :-)
 
 */
+header .row {
+    display: flex;
+    flex-flow: row nowrap;
+}
 
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+} 
+
+.menu-toggle {
+    color: #333;
+    margin-right: 1rem;
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+    color: #C85028;
+}
+
+.main-menu {
+    position: fixed;
+    display: none;
+    left: -200px;
+    top: 0;
+    height: 100%;
+    overflow-x: visible;
+    overflow-y: auto;
+    transition: left 0.3s ease;
+    z-index: 999;
+}
+
+.main-menu ul {
+    list-style: none;
+    margin: 0;
+    padding-top: 2.5em;
+    min-height: 100%;
+    width: 200px;
+    background-color: #1a1a1a;
+}
+
+.main-menu a {
+    display: block;
+    padding: 0.75em;
+    color: #ffffff;
+    text-decoration: none;
+    border-bottom: 1px solid #383838;
+}
+
+.main-menu li:first-child a {
+    border-top: 1px solid #383838;
+}
+
+.main-menu a:hover,
+.main-menu a:focus {
+    text-decoration: underline;
+    background: #333;
+}
+
+.main-menu .menu-close {
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.main-menu:target {
+    display: block;
+    left: 0;
+    outline: none;
+}
+
+.main-menu:target .menu-close {
+    z-index: 1001;
+
+}
+
+.main-menu:target ul {
+    position: relative;
+    z-index: 1000;
+}
+
+.main-menu:target + .backdrop {
+    position: fixed;
+    display: block;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 998;
+    background-color: rgba(0, 0, 0,0.85);
+    cursor: default;
+}
 
 header {
     border-bottom: 4px solid #9EA9C1;
@@ -31,6 +128,39 @@ nav a {
           border: none;
           margin: 0;
       }
+      .menu-toggle,
+      .main-menu .menu-close {
+          display: none;
+      }
+      .main-menu {
+          position: static;
+          display: block;
+      }
+      .main-menu ul {
+          padding: 0;
+          height: auto;
+          width: auto;
+          background: none;
+          overflow: hidden;
+          text-align: center;
+      }
+      .main-menu li {
+          display: inline-block;
+      }
+      .main-menu li:first-child {
+          border-top: none;
+      }
+      .main-menu a {
+          color: #C85028;
+          border-bottom: none;
+          display: inline;
+      }
+      .main-menu a:hover,
+      .main-menu a:focus {
+        background: none;
+        color: #7e64be;
+        text-decoration: none;
+      } 
     nav {
         border-top: 4px solid #9EA9C1;
         border-bottom: 1px solid #dddddd;
